welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:32: error: Unit does not take parameters
 		getMotif();
                        ^